--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <table cellspacing ="20">
         <tr>
-            <td><img src="C:\Users\lenovo\Downloads\robot-modified (1).jpg" alt="Roseau atangana"></td>
+            <td><img src="images\robot-modified (1).jpg" alt="Roseau atangana"></td>
             <td>    <h1> ROSEAU ATANGANA </h1>
                 <p> <em>  Founder and CTO of <strong><a href="https://www.appbrewery.co/">the App Brewery</a></strong> </em>.</p>
                 <p>l am an ios and web Developer. l love coffee and brew my own beers.</p></td>
